--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,8 @@ $colors: (
   light: #f6f9fa,
   dark: #0e1527,
 );
-
 $padding: 15px;
 $borders: 15px;
-
 @function color($color-name) {
   @return map-get($colors, $color-name);
 }
@@ -66,7 +64,6 @@ header {
         padding: 15px;
         transition: 0.2s all ease;
         border-bottom: 1px solid transparent;
-
         &:hover {
           color: color(light);
           text-shadow: 0px 1px 2px rgba(138, 162, 208, 0.76);
@@ -94,11 +91,12 @@ header {
           rgba(65, 122, 178, 0.08) 35%,
           rgba(0, 0, 0, 0) 100%
         );
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#417ab2",endColorstr="#000000",GradientType=1);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#417ab2", endColorstr="#000000", GradientType=1);
       }
     }
   }
 }
+
 .nav--main {
   background: rgba(10, 38, 57, 0.95);
   z-index: 2;
@@ -107,6 +105,7 @@ header {
     text-shadow: 0px 0px 2px rgba(167, 202, 206, 0.71);
   }
 }
+
 .nav--sub {
   background: rgba(2, 14, 25, 0.95);
   box-shadow: 0 -2px 2px 1px rgba(0, 0, 0, 0.95),
@@ -129,11 +128,13 @@ header {
     text-shadow: 0px 0px 1px rgba(128, 180, 206, 0.63);
   }
 }
+
 .wrapper {
   min-width: 1100px;
   margin: 0 auto;
   position: relative;
 }
+
 .img-container {
   position: absolute;
   top: 8px;
@@ -156,15 +157,12 @@ header {
   padding: 5px;
   width: 75px;
   height: 75px;
-
-  .line-vertical {
+  .line {
     background: color(blue);
+    border-radius: 3px;
+    position: absolute;
     width: 40px;
     height: 3px;
-    top: -2px;
-    left: 22px;
-    position: absolute;
-    border-radius: 3px;
     border: 1px solid rgba(14, 21, 39, 0.85);
     &:after {
       content: "";
@@ -172,30 +170,25 @@ header {
       width: 40px;
       height: 2px;
       position: absolute;
-      bottom: -84px;
       border-radius: 3px;
       border: 1px solid rgba(14, 21, 39, 0.85);
     }
-  }
-  .line-horizontal {
-    border-radius: 3px;
-    background: color(blue);
-    height: 40px;
-    width: 3px;
-    position: absolute;
-    left: -2px;
-    border: 1px solid rgba(14, 21, 39, 0.85);
-    border-radius: 3px;
-    &:after {
-      content: "";
+    &.line-horizontal {
+      top: -2px;
+      left: 22px;
+      &:after {
+        bottom: -84px;
+      }
+    }
+    &.line-vertical {
       height: 40px;
-      width: 2px;
-      background: color(blue);
-      display: block;
-      position: absolute;
-      right: -84px;
-      border-radius: 3px;
-      border: 1px solid rgba(14, 21, 39, 0.85);
+      width: 3px;
+      left: -2px;
+      &:after {
+        height: 40px;
+        width: 2px;
+        right: -84px;
+      }
     }
   }
   .img-portrait {
@@ -216,6 +209,7 @@ header {
     box-shadow: inset 0px 0px 10px 1px color(blue);
   }
 }
+
 .img-holder {
   width: 150px;
   padding: 5px;
@@ -228,14 +222,17 @@ header {
   border-radius: 3px;
   border: 1px solid color(blue);
 }
+
 main {
   display: flex;
 }
+
 .d-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .btn {
   background: transparent;
   border: none;
