--- a/css/main.scss
+++ b/css/main.scss
@@ -3,11 +3,11 @@ $colors: (
   light: #f6f9fa,
   dark: #0e1527,
 );
-$padding: 15px;
-$borders: 15px;
 @function color($color-name) {
   @return map-get($colors, $color-name);
 }
+$border: 1px solid rgba(178, 225, 230, 0.07);
+$transition: 0.2s all ease;
 
 body,
 html {
@@ -27,7 +27,6 @@ h1 {
 }
 
 body {
-  // background-color: color(primary);
   background: url(../images/bg.jpg) center center no-repeat;
   min-height: 100%;
   width: 100%;
@@ -40,7 +39,7 @@ header {
 
 .nav {
   display: flex;
-  border-bottom: 1px solid rgba(178, 225, 230, 0.07);
+  border-bottom: $border;
   box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.75);
   position: relative;
   ul {
@@ -51,10 +50,10 @@ header {
     li {
       text-transform: uppercase;
       display: flex;
-      transition: 0.2s all ease;
+      transition: $transition;
       &:after {
         content: "";
-        border-right: 1px solid rgba(178, 225, 230, 0.07);
+        border-right: $border;
       }
       &:last-child:after {
         display: none;
@@ -62,12 +61,12 @@ header {
       a {
         text-decoration: none;
         padding: 15px;
-        transition: 0.2s all ease;
+        transition: $transition;
         border-bottom: 1px solid transparent;
         &:hover {
           color: color(light);
           text-shadow: 0px 1px 2px rgba(138, 162, 208, 0.76);
-          transition: 0.2s all ease;
+          transition: $transition;
           border-bottom: 1px solid color(blue);
         }
       }
@@ -240,8 +239,8 @@ main {
   padding: 0 20px;
   color: color(blue);
   font-size: 25px;
-  border-right: 1px solid rgba(178, 225, 230, 0.07);
-  border-left: 1px solid rgba(178, 225, 230, 0.07);
+  border-right: $border;
+  border-left: $border;
   transition: 0.2s ease all;
   cursor: pointer;
   outline: none;
