--- a/css/main.css
+++ b/css/main.css
@@ -59,10 +59,6 @@ header {
   border-right: 1px solid rgba(178, 225, 230, 0.07);
 }
 
-.nav ul li:last-child:after {
-  display: none;
-}
-
 .nav ul li a {
   text-decoration: none;
   padding: 15px;
@@ -91,7 +87,12 @@ header {
   z-index: 2;
 }
 
-.nav--main li a {
+.nav--main ul li:before {
+  content: "";
+  border-left: 1px solid rgba(178, 225, 230, 0.07);
+}
+
+.nav--main ul li a {
   color: #b2e1e6;
   text-shadow: 0px 0px 2px rgba(167, 202, 206, 0.71);
 }
@@ -127,6 +128,10 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.nav--sub ul li:last-child:after {
+  display: none;
 }
 
 .nav--sub li a {
