--- a/css/main.scss
+++ b/css/main.scss
@@ -55,9 +55,6 @@ header {
         content: "";
         border-right: $border;
       }
-      &:last-child:after {
-        display: none;
-      }
       a {
         text-decoration: none;
         padding: 15px;
@@ -99,9 +96,15 @@ header {
 .nav--main {
   background: rgba(10, 38, 57, 0.95);
   z-index: 2;
-  li a {
-    color: #b2e1e6;
-    text-shadow: 0px 0px 2px rgba(167, 202, 206, 0.71);
+  ul li {
+    &:before {
+      content: "";
+      border-left: $border;
+    }
+    a {
+      color: #b2e1e6;
+      text-shadow: 0px 0px 2px rgba(167, 202, 206, 0.71);
+    }
   }
 }
 
@@ -120,6 +123,9 @@ header {
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+    &:last-child:after {
+      display: none;
     }
   }
   li a {
